--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,10 @@ button {
   font-size: inherit;
   padding: 10px 25px;
 }
+button a {
+  text-decoration: none;
+  color: inherit;
+}
 button + button {
   margin-left: 12px;
 }
