--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -23,6 +23,11 @@
 
 button {
 
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
+
     text-decoration: none;
     padding: 5px 10px;
     border-radius: 3px;
